--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,1 +1,5 @@
-/* здесь подключите шрифты */
+$primary-font: "Lato-Regular", sans-serif;
+$secondary-font: "oswaldregular", sans-serif;
+
+@include font-face("Lato-Regular", 400, normal, url("../fonts/Lato-Regular.woff2") format("woff2"));
+@include font-face("oswaldregular", 400, normal, url("../fonts/oswaldregular.woff2") format("woff2"));
