--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,5 +1,18 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: $primary-font;
   font-size: 16px;
   line-height: 24px;
