--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,3 @@
 /* здесь используйте глобальные переменные */
+$primary-font: "Lato-Regular", sans-serif;
+$secondary-font: "oswaldregular", sans-serif;
