--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,6 +1,8 @@
 /* здесь используйте глобальные селекторы img, body, html и так далее */
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
