Начало стилизации шрифтов

--- a/source/styles/blocks/menu-list.scss
+++ b/source/styles/blocks/menu-list.scss
@@ -1,5 +1,5 @@
 .menu-list {
-  font-family: $title-font;
+  font-family: $secondary-font;
   font-size: 20px;
   line-height: 20px;
   font-weight: 400;
