--- a/source/styles/blocks/nutrition-programs.scss
+++ b/source/styles/blocks/nutrition-programs.scss
@@ -4,13 +4,13 @@
 }
 
 .nutrition-programs__title {
-  font-family: $title-font;
+  font-family: $secondary-font;
   font-size: 36px;
   line-height: 36px;
 }
 
 .nutrition-programs__description {
-  font-family: $title-font;
+  font-family: $secondary-font;
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
