--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,3 +1,5 @@
 /* здесь используйте глобальные переменные */
 $primary-font: "Lato-Regular", sans-serif;
-$title-font: "oswaldregular", sans-serif;
+$secondary-font: "Oswald", sans-serif;
+
+$bg-basic-green: #68b738;
