Добавила векторную графику на главную страницу

--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -14,7 +14,7 @@
 @import "./blocks/main-container.scss";
 @import "./blocks/nutrition-programs.scss";
 @import "./blocks/catalog-categories.scss";
-@import "./blocks/categories-card.scss";
+@import "./blocks/categories.scss";
 @import "./blocks/method-application.scss";
 @import "./blocks/title-section.scss";
 @import "./blocks/example.scss";
