--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -20,3 +20,14 @@ body {
   line-height: 24px;
   color: #000000;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
