--- a/source/styles/blocks/categories.scss
+++ b/source/styles/blocks/categories.scss
@@ -1,3 +1,8 @@
+.categories__card {
+  background-color: #f2f2f2;
+}
+
+
 .categories__card-title {
   font-family: $secondary-font;
   font-size: 24px;
