--- a/source/styles/blocks/main-contacts.scss
+++ b/source/styles/blocks/main-contacts.scss
@@ -1,3 +1,8 @@
+// .main-contacts {
+//   display: flex;
+//   flex-direction: row-reverse;
+// }
+
 .main-contacts__title {
   font-family: $secondary-font;
   font-size: 16px;
