--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -10,6 +10,11 @@ html {
   height: 100%;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -28,6 +33,9 @@ body {
   margin: -1px;
   padding: 0;
   border: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
