--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -3,3 +3,8 @@ $primary-font: "Lato-Regular", sans-serif;
 $secondary-font: "Oswald", sans-serif;
 
 $bg-basic-green: #68b738;
+
+$mobile-width: 320px;
+$tablet-width: 768px;
+$desktop-width: 1440px;
+
