--- a/source/styles/blocks/categories.scss
+++ b/source/styles/blocks/categories.scss
@@ -33,7 +33,7 @@
 .categories__card-slim::before {
   content: "";
   position: absolute;
-  background-image: url("../../icons/stack.svg#categories__card-slim");
+  background-image: url("../../icons/stack.svg#categories-card-slim");
   background-repeat: no-repeat;
   background-position: center;
   width: 36px;
@@ -44,7 +44,7 @@
 .categories__card-pro::before {
   content: "";
   position: absolute;
-  background-image: url("../../icons/stack.svg#categories__card-pro");
+  background-image: url("../../icons/stack.svg#categories-card-pro");
   background-repeat: no-repeat;
   background-position: center;
   width: 67px;
