--- a/source/styles/blocks/title-section.scss
+++ b/source/styles/blocks/title-section.scss
@@ -2,4 +2,9 @@
   font-family: $secondary-font;
   font-size: 36px;
   line-height: 40px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+  }
 }
