--- a/source/styles/blocks/categories.scss
+++ b/source/styles/blocks/categories.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: $desktop-width) {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
     gap: 80px;
     justify-content: center;
   }
