--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -1,6 +1,10 @@
 .main-nav {
   position: relative;
   width: 100%;
+
+  // @media (min-width: $desktop-width) {
+  //   padding-left: 320px;
+  // }
 }
 
 .main-nav--pages a {
@@ -15,6 +19,13 @@
   }
 }
 
+// .main-nav__wrapper {
+//   @media (min-width: $desktop-width) {
+//     padding-left: 320px;
+//   }
+// }
+
+
 .main-nav__list {
   list-style: none;
   padding: 0;
@@ -27,6 +38,10 @@
     gap: 35px;
     flex-wrap: wrap;
   }
+
+  // @media (min-width: $desktop-width) {
+  //   padding-left: 320px;
+  // }
 }
 
 .main-nav__item {
