--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -14,11 +14,11 @@
     border-bottom: unset;
     padding-top: unset;
     padding-bottom: unset;
-    background-image: linear-gradient(#ffffff 14%, #eaeaea 14%);
+    background-image: linear-gradient(#ffffff 14%, #f2f2f2 14%);
   }
 
   @media (min-width: $desktop-width) {
-    background-image: linear-gradient(#ffffff 12%, #eaeaea 12%);
+    background-image: linear-gradient(#ffffff 12%, #f2f2f2 12%);
   }
 }
 
