--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -109,6 +109,10 @@
   display: block;
   cursor: pointer;
 
+  @media (min-width: $desktop-width) {
+    height: 512px;
+  }
+
   &::before {
     content: "";
     width: 40px;
