--- a/source/styles/blocks/newsletter.scss
+++ b/source/styles/blocks/newsletter.scss
@@ -1,6 +1,6 @@
 .newsletter {
   position: relative;
-  margin: 40px 0;
+  margin: 44px 0;
   text-align: center;
 
   @media (min-width: $tablet-width) {
@@ -19,7 +19,7 @@
   width: fit-content;
   background-color: #ffffff;
   box-shadow: -40px 0 0 #ffffff, 40px 0 0 #ffffff;
-  margin: 25px 0 36px;
+  margin: -5px 0 31px
 
   // &::after {
   //   content: "";
@@ -82,12 +82,12 @@
 
 .newsletter__description {
   font-family: $secondary-font;
-  margin-top: -5px;
 
   @media (min-width: $tablet-width) {
     font-size: 24px;
     line-height: 32px;
     padding: 0 30px;
+    margin-top: -5px;
   }
 }
 
@@ -146,6 +146,7 @@
   border: none;
   cursor: pointer;
   width: 100%;
+  height: 56px;
 
   @media (min-width: $tablet-width) {
     width: 256px;
