--- a/source/styles/blocks/statistics.scss
+++ b/source/styles/blocks/statistics.scss
@@ -1,10 +1,10 @@
-.statistics-item {
+.statistics__item {
   @media (min-width: $tablet-width) {
     min-width: 162px;
   }
 }
 
-.statistics-item--total {
+.statistics__item--total {
   grid-column: 1/-1;
   display: flex;
   justify-self: center;
@@ -55,11 +55,13 @@
   margin: unset;
   padding-left: 10px;
   padding-right: 10px;
+  margin-top: -10px;
 
   @media (min-width: $tablet-width) {
     background-color: #ffffff;
     width: unset;
     margin: 0;
+    margin-top: unset;
   }
 
   @media (min-width: $desktop-width) {
