--- a/source/styles/blocks/categories.scss
+++ b/source/styles/blocks/categories.scss
@@ -179,28 +179,33 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #000000;
+  position: relative;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
   }
-}
 
-.categories__card-link--click:active {
-  opacity: 30%;
-}
+  &::after {
+    content: "";
+    position: absolute;
+    background-image: url("../../icons/stack.svg#arrow-right");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 32px;
+    height: 10px;
+    margin-top: -5px;
+    top: 50%;
+    right: -46px;
+    transform-origin: left center;
+    transition: all 0.3s linear;
+  }
 
-.categories__card-link::after {
-  content: "";
-  position: absolute;
-  background-image: url("../../icons/stack.svg#arrow-right");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 32px;
-  height: 10px;
-  transform: translate(15px, 7px);
+  &:is(:hover, :focus-visible, :focus)::after {
+    transform: scaleX(1.35);
+  }
 
-  @media (min-width: $tablet-width) {
-    transform: translate(25px, 11px);
+  &:active {
+    opacity: 30%;
   }
 }
