--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -8,7 +8,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    background-image: linear-gradient(to bottom, #ffffff 20%, #f2f2f2 20%);
+    background-image: linear-gradient(to bottom, #ffffff 110px, #f2f2f2 110px);
     padding: 25px 0 10px;
   }
 }
@@ -17,6 +17,7 @@
   @media (min-width: $desktop-width) {
     display: flex;
     flex-direction: row;
+    align-items: flex-start;
   }
 }
 
