--- a/source/styles/blocks/newsletter.scss
+++ b/source/styles/blocks/newsletter.scss
@@ -19,7 +19,7 @@
   width: fit-content;
   background-color: #ffffff;
   box-shadow: -40px 0 0 #ffffff, 40px 0 0 #ffffff;
-  margin: -5px 0 31px
+  margin: -5px 0 31px;
 
   // &::after {
   //   content: "";
@@ -139,7 +139,7 @@
   background-color: $bg-basic-green;
   font-family: $secondary-font;
   font-size: 20px;
-  line-height: 30px;
+  line-height: 26px;
   color: #ffffff;
   padding: 15px;
   text-transform: uppercase;
