--- a/source/styles/blocks/other-products.scss
+++ b/source/styles/blocks/other-products.scss
@@ -174,6 +174,8 @@
   text-align: center;
   display: block;
   height: 40px;
+  font-size: 16px;
+  line-height: 20px;
 
   @media (min-width: $tablet-width) {
     grid-column: -1/1;
