--- a/source/styles/blocks/statistics.scss
+++ b/source/styles/blocks/statistics.scss
@@ -51,23 +51,22 @@
   order: 1;
   color: #444444;
   background-color: #f2f2f2;
-  width: fit-content;
-  margin: unset;
+  width: 100px;
+  margin: 0 auto;
   padding-left: 10px;
   padding-right: 10px;
-  margin-top: -10px;
+  margin-top: -8px;
 
   @media (min-width: $tablet-width) {
     background-color: #ffffff;
-    width: unset;
-    margin: 0;
-    margin-top: unset;
+    width: fit-content;
+    margin: auto;
+    margin-top: -8px;
   }
 
   @media (min-width: $desktop-width) {
     background-color: #f2f2f2;
-    width: fit-content;
-    margin: auto;
+    margin-top: -9px;
   }
 }
 
