--- a/source/styles/blocks/nutrition-programs.scss
+++ b/source/styles/blocks/nutrition-programs.scss
@@ -4,7 +4,12 @@
       rgba(104, 183, 56, 0.85) 63%,
       rgba(255, 255, 255, 1) 63%,
     ),
-    url("../../images/index-background-mobile@2x.png");
+    image-set(
+      url("../../images/index-background-mobile@2x.webp") type("image/webp") 2x,
+      url("../../images/index-background-mobile@1x.webp") type("image/webp") 1x,
+      url("../../images/index-background-mobile@2x.png") type("image/png") 2x,
+      url("../../images/index-background-mobile@1x.png") type("image/png") 1x);
+
   background-repeat: no-repeat;
   background-position: top center;
   background-size: contain;
