--- a/source/styles/blocks/action.scss
+++ b/source/styles/blocks/action.scss
@@ -67,15 +67,16 @@
 
 
   @media (min-width: $tablet-width) {
-    width: 170px;
+    width: 205px;
     text-align: left;
-    margin-top: 12px;
+    margin: 0;
+    padding-right: 50px;
   }
 
-  @media (min-width: $tablet-width) {
+  @media (min-width: $desktop-width) {
     width: 180px;
     text-align: center;
-    margin: 0;
+    padding-right: unset;
     padding-top: 45px;
   }
 }
