--- a/source/styles/blocks/filter.scss
+++ b/source/styles/blocks/filter.scss
@@ -19,6 +19,10 @@
     border-bottom: 1px solid #cdcdcd;
     padding: 5px;
   }
+
+  @media (min-width: $tablet-width) {
+    padding: 5px 0;
+  }
 }
 
 .filter__value {
