--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -3,7 +3,7 @@
   padding: 25px 0 40px;
 
   @media (min-width: $tablet-width) {
-    background-image: linear-gradient(to bottom, #ffffff 62%, #eaeaea 62%);
+    background-image: linear-gradient(to bottom, #ffffff 600px, #eaeaea 600px);
     padding: 25px 0 50px;
   }
 
