--- a/source/styles/blocks/page.scss
+++ b/source/styles/blocks/page.scss
@@ -24,9 +24,8 @@
   @media (min-width: $desktop-width) {
     background-image:
       image-set(
-        url("../../images/index-background-pc@2x.webp") type("image/webp") 2x
+        url("../../images/index-background-pc@2x.webp") type("image/webp") 2x,
         url("../../images/index-background-pc@1x.webp") type("image/webp") 1x,
-        ,
         url("../../images/index-background-pc@2x.jpg") type("image/jpeg") 2x,
         url("../../images/index-background-pc@1x.jpg") type("image/jpeg") 1x
       );
