--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -102,7 +102,7 @@
 
 .product-card__description {
   @media (min-width: $tablet-width) {
-    min-width: 250px;
+    min-width: 258px;
     width: 170px;
     text-align: center;
   }
@@ -149,7 +149,7 @@
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 24px;
-    padding: 22px 17px 20px;
+    padding: 23px 17px 19px;
     margin: auto;
     text-align: center;
   }
@@ -170,6 +170,10 @@
     line-height: 24px;
     margin: 0;
     padding: 160px 40px 23px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding: 145px 25px 23px;
   }
 }
 
