--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,6 +1,7 @@
 .main-header {
   position: relative;
   display: flex;
+  flex-direction: column;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
