--- a/source/styles/blocks/categories.scss
+++ b/source/styles/blocks/categories.scss
@@ -126,6 +126,7 @@
   margin: 0;
   padding-left: 70px;
   padding-bottom: 30px;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
