--- a/source/styles/blocks/main-contacts.scss
+++ b/source/styles/blocks/main-contacts.scss
@@ -60,6 +60,7 @@
   text-transform: uppercase;
   color: #111111;
   margin: 0;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     min-width: 170px;
