--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -6,6 +6,7 @@
   padding: 27px 0 41px;
   border-top: 1px solid #d9d9d9;
   border-bottom: 1px solid #d9d9d9;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
