--- a/source/styles/blocks/newsletter.scss
+++ b/source/styles/blocks/newsletter.scss
@@ -20,6 +20,7 @@
   background-color: #ffffff;
   box-shadow: -40px 0 0 #ffffff, 40px 0 0 #ffffff;
   margin: -5px 0 31px;
+  font-weight: 400;
 
   // &::after {
   //   content: "";
