--- a/source/styles/blocks/other-products.scss
+++ b/source/styles/blocks/other-products.scss
@@ -24,6 +24,7 @@
 
   margin: 0;
   padding: 25px 0 36px;
+  font-weight: 400;
 
   // &::after {
   //   content: "";
@@ -144,6 +145,7 @@
   line-height: 16px;
   margin: 0;
   padding-top: 13px;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
