--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -145,6 +145,7 @@
   color: #222222;
   width: 70%;
   text-align: left;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
