--- a/source/styles/blocks/title-section.scss
+++ b/source/styles/blocks/title-section.scss
@@ -2,6 +2,7 @@
   font-family: $secondary-font;
   font-size: 36px;
   line-height: 40px;
+  font-weight: 400;
 
   @media (min-width: $tablet-width) {
     font-size: 60px;
