--- a/source/styles/blocks/product-card.scss
+++ b/source/styles/blocks/product-card.scss
@@ -22,7 +22,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    background-image: linear-gradient(#ffffff 12%, #eaeaea 12%);
+    background-image: linear-gradient(#ffffff 12%, #f2f2f2 12%);
   }
 }
 
@@ -39,6 +39,10 @@
     border: 2px solid #d3d3d3;
     margin-top: 70px;
   }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 66px;
+  }
 }
 
 .product-card--more::before {
@@ -53,7 +57,7 @@
 
 
   @media (min-width: $tablet-width) {
-    top: 20%x;
+    top: 80px;
     left: 50%;
     width: 2px;
     height: 60px;
@@ -71,7 +75,7 @@
   transform: translate(-50%, -50%) rotate(90deg);
 
   @media (min-width: $tablet-width) {
-    top: 20%x;
+    top: 80px;
     left: 50%;
     width: 2px;
     height: 60px;
@@ -178,7 +182,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 145px 25px 23px;
+    padding: 150px 25px 26px;
   }
 }
 
