--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -3,12 +3,12 @@
   padding: 25px 0 40px;
 
   @media (min-width: $tablet-width) {
-    background-image: linear-gradient(to bottom, #ffffff 600px, #eaeaea 600px);
-    padding: 25px 0 50px;
+    background-image: linear-gradient(to bottom, #ffffff 620px, #eaeaea 620px);
+    padding: 25px 0 45px;
   }
 
   @media (min-width: $desktop-width) {
-    background-image: linear-gradient(to bottom, #ffffff 110px, #f2f2f2 110px);
+    background-image: linear-gradient(to bottom, #ffffff 116px, #f2f2f2 116px);
     padding: 25px 0 10px;
   }
 }
@@ -24,6 +24,11 @@
 .example__title {
   margin: 0;
   padding-bottom: 40px;
+
+
+  @media (min-width: $tablet-width) {
+    margin: 20px 0 0;
+  }
 
   @media (min-width: $desktop-width) {
     margin: -44px 0;
@@ -72,7 +77,7 @@
     grid-template-columns: 168px 168px;
     grid-template-rows: 1fr;
     text-align: center;
-    gap: 55px 32px;
+    gap: 58px 36px;
   }
 }
 
