--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -5,7 +5,7 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
-    padding: 25px 30px 0;
+    padding: 12px 33px 0 10px;
     align-items: center;
   }
 
@@ -32,12 +32,16 @@
   align-items: center;
 }
 
+.main-header__logo-pic {
+  max-width: unset;
+}
+
 .main-header__logo-text {
   margin-left: 56px;
 
   @media (min-width: $tablet-width) {
-    margin-left: 20px;
-    width: 53%;
+    margin-left: 12px;
+    width: 152px;
   }
 
   @media (min-width: $desktop-width) {
