--- a/source/styles/blocks/statistics.scss
+++ b/source/styles/blocks/statistics.scss
@@ -38,8 +38,14 @@
 
   @media (min-width: $tablet-width) {
     font-size: 30px;
-    line-height: 37px;
+    line-height: 40px;
     margin: -4px 0;
+    padding: 14px 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: -7px 0;
+    width: 162px;
   }
 }
 
@@ -61,6 +67,8 @@
     width: fit-content;
     margin: auto;
     margin-top: -5px;
+    font-size: 14px;
+    line-height: 14px;
   }
 
   @media (min-width: $desktop-width) {
@@ -100,6 +108,6 @@
   }
 
   @media (min-width: $desktop-width) {
-    margin-left: 63px;
+    margin-left: 58px;
   }
 }
